# NightAtMuseum_DataProc

./: .gitignore  README.md  clean_sequence.txt  pyproject.toml
scripts/: extract_features.sbatch  merge_animo_features.py  preprocess.sbatch  slurm_export.sh
source/: batch_export.py  blender_export_glb.py  count_animations.py  extract_features.py  mesh_toolkit.py  pack_dt4d_hdf5.py  pack_glb_hdf5.py  pack_pickle_hdf5.py  pack_pickle_zarr.py  preprocess.py  sphere_hammersley.py  stats_glb.py  stats_pickle.py  vertex_histogram.py
source/blender_script/: render_mesh.py
