[project]
name = "nightatmuseum-dataproc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "tqdm>=4.67.3",
    "tyro>=1.0.6",
]
